# EnemyNations

./: HISTORY.md  README.md  ROADMAP.md
Assets/video/: headgame.avi
src/: CMakeLists.txt  lastplnt.cpp  sprite.cpp  vdmplay.h  world.cpp
src/dave/: sprite.cpp
src/detail/: sprite_sampling.h
src/tests/: CMakeLists.txt  scanline_sprite_tests.cpp
windward/: CMakeLists.txt
windward/include/: dib.h  logging.h  mssw.h
windward/include/windward/: scanline_math.h
windward/include/windward/platform/: critical_section.h
windward/src/: SCANLIST.CPP  dib.cpp  logging.CPP  mss_stub.cpp  vdmplay_stub.cpp
